<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor2"
    tools:context="com.inventory.tfgproject.view.RegisterScreenInfo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bkgLogin"
        android:layout_width="412dp"
        android:layout_height="700dp"
        android:background="@drawable/roundrectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/txtInformation"
            android:layout_width="407dp"
            android:layout_height="45dp"
            android:fontFamily="@font/convergence"
            android:text="@string/information_add"
            android:textAlignment="center"
            android:textColor="@color/backgroundColor2"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.045" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="266dp"
            android:layout_height="67dp"
            android:fontFamily="@font/convergence"
            android:text="@string/continue_Register"
            android:textSize="29sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.737"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="266dp"
            android:layout_height="67dp"
            android:backgroundTint="@color/red_button"
            android:fontFamily="@font/convergence"
            android:text="@string/cancel"
            android:textSize="29sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.883" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressRegisterContainer"
            style="@style/TextInputLayoutStyle"
            android:layout_width="350dp"
            android:layout_height="76dp"
            android:imeOptions="actionNext"
            android:textColorHint="@color/backgroundColor2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.173"
            app:startIconDrawable="@drawable/ic_home"
            app:startIconTint="@color/backgroundColor2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAddressRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/convergence"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress"
                android:paddingStart="45dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneRegisterContainer"
            style="@style/TextInputLayoutStyle"
            android:layout_width="350dp"
            android:layout_height="76dp"
            android:imeOptions="actionDone"
            android:textColorHint="@color/backgroundColor2"
            app:helperText="@string/required"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/backgroundColor2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPhoneRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/convergence"
                android:hint="@string/phone"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:paddingStart="45dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnBirthdate"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/navigation"
            android:drawablePadding="8dp"
            android:text="@string/birthday"
            android:textColor="@color/backgroundColor1"
            android:textSize="20sp"
            app:background="@color/backgroundColor2"
            app:icon="@drawable/ic_calendar"
            app:iconTint="@color/backgroundColor1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.451" />

        <Button
            android:id="@+id/btnImgRegister"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/navigation"
            android:drawablePadding="8dp"
            android:text="@string/upload_image"
            android:textColor="@color/backgroundColor1"
            android:textSize="20sp"
            app:background="@color/backgroundColor2"
            app:icon="@drawable/ic_user"
            app:iconTint="@color/backgroundColor1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.57" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>